[gd_scene load_steps=4 format=3 uid="uid://cc02ta53bypgm"]

[ext_resource type="Texture2D" uid="uid://nh32y87hcke5" path="res://icon.svg" id="1_0cyym"]
[ext_resource type="Script" uid="uid://dyk3dehb3twof" path="res://scripts/combatants/StatusEffect.gd" id="2_kfjjq"]

[sub_resource type="LabelSettings" id="LabelSettings_006od"]
font_size = 12

[node name="StatusEffect" type="TextureRect"]
custom_minimum_size = Vector2(24, 24)
texture = ExtResource("1_0cyym")
expand_mode = 1
script = ExtResource("2_kfjjq")

[node name="StatusChargeLabel" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_left = 12.0
offset_top = 14.0
offset_right = 33.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 12
text = "999"
label_settings = SubResource("LabelSettings_006od")
horizontal_alignment = 1

[node name="StatusSecondaryChargeLabel" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_left = 12.0
offset_top = -1.0
offset_right = 33.0
offset_bottom = 16.0
theme_override_font_sizes/font_size = 12
label_settings = SubResource("LabelSettings_006od")
horizontal_alignment = 1
